--- a/css/vars.css
+++ b/css/vars.css
@@ -4,4 +4,6 @@
     --pry-clr-preview: hsl(161 100% 44%);
     --sdry-clr: 227 66% 15%;
     --sdry-clr-preview: hsl(227 66% 15%);
+    --act-clr: 261 100% 26%;
+    --act-clr-preview: hsl(261 100% 26%);
 }
