add: More content in Home

--- a/css/vars.css
+++ b/css/vars.css
@@ -1,4 +1,4 @@
-
+@import url('http://fonts.cdnfonts.com/css/conthrax');
 :root{
     --pry-clr: 161 100% 44%;
     --pry-clr-preview: hsl(161 100% 44%);
