--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
+    user-select: none;
 }
 
 html{
@@ -35,7 +36,9 @@ header:first-child{
 .navbar-brand img{
     height: 3.5rem;
 }
-
+#search button{
+    background-color: hsl(var(--pry-clr));
+}
 .fa-icon, .fa-icon1{
     border-radius: .25rem;
     padding: .5rem;
@@ -70,8 +73,10 @@ footer{
 #footerTopSection a{
     align-self: center;
     color: hsl(var(--pry-clr));
-    font-size: 2.5rem;
+    font-size: 2rem;
     text-decoration: none;
+    background-color: #fff;
+    border-radius: 50%;
 }
 #footerTopSection a:hover{
     color: hsl(var(--sdry-clr));
@@ -100,7 +105,8 @@ footer{
 
     font-weight: normal;
     margin-left: -2rem;
-    font-size: medium;
+    font-size: large;
+    font-weight: 500;
 }
 .fa-brands{
     font-size: 2rem;
@@ -112,4 +118,21 @@ footer{
 }
 .flag{
     transform: scale(1.5);
+}
+.spaceTop{
+    margin-top: 2rem;
+}
+
+@media screen and (min-width:720px) {
+    main{
+        z-index: -2;
+        background-color: #ffffff36;
+        box-shadow: 0 0 1rem #00000036;
+    }
+    body{
+        padding: 0 5rem;
+        background-image: url(../img/body-bg.jpg);
+        background-size: 20rem;
+        background-repeat: repeat;
+    }
 }
