--- a/css/vars.css
+++ b/css/vars.css
@@ -1,7 +1,7 @@
 @import url('http://fonts.cdnfonts.com/css/conthrax');
 :root{
-    --pry-clr: 161 100% 44%;
-    --pry-clr-preview: hsl(161 100% 44%);
+    --pry-clr: 161 100% 38%;
+    --pry-clr-preview: hsl(161, 100%, 38%);
     --sdry-clr: 227 66% 15%;
     --sdry-clr-preview: hsl(227 66% 15%);
     --act-clr: 261 100% 26%;
