--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,9 @@
     padding: 0;
     user-select: none;
 }
-
+body{
+    background-color: rgb(30, 54, 78);
+}
 html{
     scroll-behavior: smooth;
 }
