add: show/hide password text in input fields

--- a/css/vars.css
+++ b/css/vars.css
@@ -1,7 +1,7 @@
 @import url('http://fonts.cdnfonts.com/css/conthrax');
 :root{
     --pry-clr: 161 100% 38%;
-    --pry-clr-preview: #00c284;
+    --pry-clr-preview: #00de93;
     --sdry-clr: 227 66% 15%;
     --sdry-clr-preview: #0d183f;
     --act-clr: 261 100% 26%;
