--- a/css/main.css
+++ b/css/main.css
@@ -30,16 +30,21 @@ nav li:hover{
 header:first-child{
     background-color: hsl(var(--sdry-clr));
 }
-
 #logo{
     height: 10rem;
 }
-
 .navbar-brand img{
     height: 3.5rem;
 }
 #search button{
     background-color: hsl(var(--pry-clr));
+}
+.input-group .hideShowPassword{
+    background-color: hsl(var(--sdry-clr));
+    color: white;
+}
+.input-group .hideShowPassword:hover{
+    color: hsl(var(--pry-clr));
 }
 .fa-icon, .fa-icon1{
     border-radius: .25rem;
@@ -48,7 +53,6 @@ header:first-child{
     color: white;
     transform: scale(1);
 }
-
 .fa-icon:hover{
     background-color: rgba(255, 255, 255, 0.116);
     color: hsl(var(--pry-clr));
@@ -56,7 +60,6 @@ header:first-child{
 .fa-icon1:hover{
     background-color: rgba(255, 255, 255, 0.342);
 }
-
 .fa-icon:active, .fa-icon1:active{
     transform: scale(0.9);
 }
@@ -124,8 +127,6 @@ footer{
 .spaceTop{
     margin-top: 2rem;
 }
-
-
 .name{
     font-family: 'conthrax', sans-serif;
 }
