--- a/css/vars.css
+++ b/css/vars.css
@@ -1,9 +1,9 @@
 @import url('http://fonts.cdnfonts.com/css/conthrax');
 :root{
     --pry-clr: 161 100% 38%;
-    --pry-clr-preview: #00de93;
+    --pry-clr-preview: #00de97;
     --sdry-clr: 227 66% 15%;
-    --sdry-clr-preview: #0d183f;
+    --sdry-clr-preview: #0d1840;
     --act-clr: 261 100% 26%;
-    --act-clr-preview: hsl(261 100% 26%);
+    --act-clr-preview: #2f0084;
 }
